# davidia

./: .eslintrc.cjs  .gitignore  .prettierignore  .project  .pydevproject  DEVELOP.md  Dockerfile  LICENSE  README.md  catalog-info.yaml  config-overrides.js  environment.yml  eslint.config.js  eslint.config.mjs  index.html  jest.config.js  jest.config.ts  main.d.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  python_types.d.ts  tsconfig.json  tsdoc.json  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/ci-only/: h5web-lib-0.0.1.tgz  h5web-lib-9.0.1.tgz
.github/workflows/: deploy-storybook.yaml  npm-publish.yaml  osv-scanner.yaml  pypi-publish.yaml  python-package.yml
api/: app.py  example_processor.py  main.py  plot_request.py  plotserver.py  processor.py  pyproject.toml  python_types.d.ts  requirements.txt  setup.py
api/demos/: benchmark.py  simple.py
api/plot/: benchmark_plotting.py  clear_plot.py  custom_types.py  example_processor.py  fastapi_utils.py  plot_request.py  plotidmap.py  plotserver.py  processor.py  utils.py
api/tests/: test_api.py  test_plotserver.py  test_processor.py
ci-only/: h5web-lib-0.0.1.tgz
client/component/: .eslintrc.cjs  AspectConfigModal.tsx  AxialSelectionConfig.tsx  AxisConfigModal.tsx  AxisSelectionConfig.tsx  BatonConfigModal.tsx  BatonDropdown.tsx  ClearSelectionsBtn.tsx  DomainConfig.tsx  DomainControls.module.css  DomainControls.tsx  HeatPlot.tsx  HeatmapPlot.tsx  HorizontalAxisSelectionConfig.tsx  ImagePlot.tsx  InteractionModeToggle.module.css  InteractionModeToggle.tsx  LabelledInput.module.css  LabelledInput.tsx  LinePlot.tsx  Modal.tsx  (+39 more)
davidia/: main.py  plot.py  pyproject.toml  requirements.txt  setup.py  zmq_messages.py
public/: index.html  manifest.json
server/: pyproject.toml  pytest.ini  requirements.txt  setup.py
server/davidia/: __init__.py  generate_openapi.py  main.py  plot.py
server/davidia/demos/: benchmark.py  simple.py
server/davidia/models/: messages.py  parameters.py  selections.py
server/davidia/server/: benchmarks.py  fastapi_utils.py  plotserver.py  processor.py
server/davidia/tests/: test_api.py  test_messages.py  test_plotserver.py  test_selections.py
server/demos/: __main__.py  benchmark.py  simple.py
server/example-client/: pyproject.toml  setup.py
src/: AmplitudeSelector.tsx  App.tsx  FunctionSelector.tsx  HeatPlot.tsx  IntegralBox.tsx  LinePlot.tsx  MultiLinePlot.tsx  Plot.tsx  PlotComponent.tsx  ProfileSumLine.tsx  SelectionSwitch.tsx  index.tsx
storybook/: .eslintrc.cjs  eslint.config.js  eslint.config.mjs  package.json  tsconfig.json
(+186 files in other folders)
