[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davidia"
dynamic = ["version"]
description = "Plot server with React frontend data visualiser"
readme = "README.md"
license = "MIT"
maintainers = [
    {name = "Data Analysis group", email = "dataanalysis@diamond.ac.uk"}
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">= 3.10"
dependencies = [
    "before-after",
    "fastapi",
    "httpx",
    "msgpack",
    "pillow",
    "pydantic-numpy",
    "orjson",
    "requests",
    "uvicorn",
    "websockets",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-asyncio",
]
all = [
    "davidia-example-client"
]

[project.scripts]
dvd-server = "davidia.main:main"
dvd-benchmark = "davidia.demos.benchmark:main"

[project.urls]
repository = "https://github.com/DiamondLightSource/davidia"

[tool.setuptools.dynamic]
version = {attr = "davidia.__version__"} 

[tool.setuptools.package-dir]
"davidia" = "davidia"
"davidia.demos" = "demos"

[tool.setuptools.package-data]
"*" = ["*.png"]

[tool.pytest.ini_options]
log_cli = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "W505"]

[tool.ruff.lint.mccabe]
max-complexity = 10
